Added a missing mobile header so the tiny CSS actually gets used.

--- a/blog-posts/07.Wacom_for_Hearthstone.html
+++ b/blog-posts/07.Wacom_for_Hearthstone.html
@@ -5,6 +5,7 @@
 		<title>Wacom_for_Hearthstone</title>
 		<link href='/css/grey-and-blue.css' rel='stylesheet'>
 		<meta name="theme-color" content="#3377FF">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
 		<link href='/css/blog.css' rel='stylesheet'>
 		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/blog-rss-feed.xml" />
 	</head>
