--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
 		<title>Contact</title>
 		<link href='/css/grey-and-blue.css' rel='stylesheet'>
 		<meta name="theme-color" content="#3377FF">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
 		
 	</head>
 	<body>
