--- a/background-town.html
+++ b/background-town.html
@@ -5,6 +5,7 @@
 		<title>Gallery</title>
 		<link href='/css/grey-and-blue.css' rel='stylesheet'>
 		<meta name="theme-color" content="#3377FF">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
 		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/gallery-rss-feed.xml" />
 	</head>
 	<body>
