Moved all .html file links to not require their extensions. Redirect.

--- a/blog-posts/10.Moving_Domains.html
+++ b/blog-posts/10.Moving_Domains.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
-		<meta charset='utf-8'>
+		<meta charset=utf-8>
 		<title>Moving_Domains</title>
-		<link href='/css/grey-and-blue.css' rel='stylesheet'>
+		<link href="/css/grey-and-blue.css" rel=stylesheet>
 		<meta name="theme-color" content="#3377FF">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
+		<link rel="canonical" href="https://ddr0.ca/single-post">
 		<link href='/css/blog.css' rel='stylesheet'>
 		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/blog-rss-feed.xml" />
 	</head>
@@ -13,13 +14,13 @@
 		<a href='#content' id='skip-nav'>skip nav</a>
 		<div id='content-holder'>
 			<div id="content-header">
-				<div id='badge'><a href="/blog.html"><img alt='' src='/images/icons/page.svg'></a></div>
+				<div id='badge'><a href="/blog"><img alt='' src='/images/icons/page.svg'></a></div>
 				<h1><img alt='blog' src='/images/text-blog.png'></h1>
 				<div id='icon-bar'>
-					<a href='/blog.html'    ><img src='/images/icons/page.svg' ><span>blog</span></a>
-					<a href='/gallery.html' ><img src='/images/icons/work.svg' ><span>gallery</span></a>
-					<a href='/contact.html' ><img src='/images/icons/chat2.svg'><span>contact</span></a>
-					<a href='/rss.xml'                                                               ><img src='/images/icons/rss.svg'  ><span>rss</span></a>
+					<a href='/blog'    ><img src='/images/icons/page.svg' ><span>blog</span></a>
+					<a href='/gallery' ><img src='/images/icons/work.svg' ><span>gallery</span></a>
+					<a href='/contact' ><img src='/images/icons/chat2.svg'><span>contact</span></a>
+					<a href='/rss.xml'                                                            ><img src='/images/icons/rss.svg'  ><span>rss</span></a>
 				</div>
 			</div>
 			<a name='content'></a>
