--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
-		<meta charset='utf-8'>
+		<meta charset=utf-8>
 		<title>Blog</title>
-		<link href='/css/grey-and-blue.css' rel='stylesheet'>
+		<link href="/css/grey-and-blue.css" rel=stylesheet>
 		<meta name="theme-color" content="#3377FF">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
+		<link rel="canonical" href="https://ddr0.ca/blog">
 		<link href='/css/blog.css' rel='stylesheet'>
 		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/blog-rss-feed.xml" />
 		<link href='/css/prism-okaidia.css' rel='stylesheet'>
@@ -18,10 +19,10 @@
 				<div id='badge'><img alt='' src='/images/icons/page.svg'></div>
 				<h1><img alt='blog' src='/images/text-blog.png'></h1>
 				<div id='icon-bar'>
-					<a href='/blog.html'    class='selected'><img src='/images/icons/page.svg' ><span>blog</span></a>
-					<a href='/gallery.html' ><img src='/images/icons/work.svg' ><span>gallery</span></a>
-					<a href='/contact.html' ><img src='/images/icons/chat2.svg'><span>contact</span></a>
-					<a href='/rss.xml'                                                               ><img src='/images/icons/rss.svg'  ><span>rss</span></a>
+					<a href='/blog'    class='selected'><img src='/images/icons/page.svg' ><span>blog</span></a>
+					<a href='/gallery' ><img src='/images/icons/work.svg' ><span>gallery</span></a>
+					<a href='/contact' ><img src='/images/icons/chat2.svg'><span>contact</span></a>
+					<a href='/rss.xml'                                                            ><img src='/images/icons/rss.svg'  ><span>rss</span></a>
 				</div>
 			</div>
 			<a name='content'></a>
