Added 'yes it works on mobile' meta tag to Cube Trains pages.

--- a/cube trains/download mac.html
+++ b/cube trains/download mac.html
@@ -6,6 +6,7 @@
 		<link rel="shortcut icon" href="/images/favicon.png">
 		<link rel="stylesheet" type="text/css" href="css/black.css">
 		<link rel="stylesheet" type="text/css" href="css/download.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
 	</head>
 	<body onLoad="mixpanel.track('download mac load');">
 		<script type="text/javascript"> //start Mixpanel
