--- a/cube trains/compiling guide.html
+++ b/cube trains/compiling guide.html
@@ -5,6 +5,7 @@
 		<title>Cube Trains</title>
 		<link rel="shortcut icon" href="/images/favicon.png">
 		<link rel="stylesheet" type="text/css" href="css/black.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
 	</head>
 	<body onLoad="mixpanel.track('compiling guide load');">
 		<script type="text/javascript"> //start Mixpanel
