--- a/cube trains/index.html
+++ b/cube trains/index.html
@@ -21,6 +21,7 @@
 		<meta property="og:image:type" content="image/png" />
 		<meta property="og:image:width" content="250" />
 		<meta property="og:image:height" content="250" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
 	</head>
 	<body onLoad="mixpanel.track('index load');">
 		<script type="text/javascript"> //start Mixpanel
