--- a/cube trains/linux compiling guide.html
+++ b/cube trains/linux compiling guide.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Cube Trains</title>
 		<link rel="stylesheet" type="text/css" href="css/black.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
 	</head>
 	<body onLoad="mixpanel.track('compiling guide load');">
 		<script type="text/javascript"> //start Mixpanel
