--- a/blog-posts/03.CreateJS_Examples/code viewer.html
+++ b/blog-posts/03.CreateJS_Examples/code viewer.html
@@ -105,7 +105,7 @@
 			};
 			
 			var highlightLine = function(colour, line) {
-				var element = window.foo = codeContainer.children[line-1];
+				var element = window.foo = codeContainer.children[line];
 				element.style.backgroundColor = colour;
 				
 				var start = window.scrollY;
