--- a/blog-posts/04.GIFs_To_PNGs.html
+++ b/blog-posts/04.GIFs_To_PNGs.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 	<head>
 		<meta charset=utf-8>
-		<title>GIFs_To_PNGs</title>
+		<title>GIFs To PNGs</title>
 		<link href="/css/grey-and-blue.css" rel=stylesheet>
 		<meta name="theme-color" content="#3377FF">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
