--- a/blog-posts/09.CSP_on_HTML_Assets.html
+++ b/blog-posts/09.CSP_on_HTML_Assets.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 	<head>
 		<meta charset=utf-8>
-		<title>CSP_on_HTML_Assets</title>
+		<title>CSP on HTML Assets</title>
 		<link href="/css/grey-and-blue.css" rel=stylesheet>
 		<meta name="theme-color" content="#3377FF">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
