--- a/blog-posts/12.Same_Script_Multiple_Tags.html
+++ b/blog-posts/12.Same_Script_Multiple_Tags.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 	<head>
 		<meta charset=utf-8>
-		<title>Same_Script_Multiple_Tags</title>
+		<title>Same Script Multiple Tags</title>
 		<link href="/css/grey-and-blue.css" rel=stylesheet>
 		<meta name="theme-color" content="#3377FF">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
