--- a/blog-posts/13.Shared_Array_Buffers_With_WASM.html
+++ b/blog-posts/13.Shared_Array_Buffers_With_WASM.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 	<head>
 		<meta charset=utf-8>
-		<title>Shared_Array_Buffer_With_WASM</title>
+		<title>Shared Array Buffers With WASM</title>
 		<link href="/css/grey-and-blue.css" rel=stylesheet>
 		<meta name="theme-color" content="#3377FF">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
