Applied iframe fix from 03 to 08, Balancing Braces.

--- a/blog-posts/08.Balancing_Braces.html
+++ b/blog-posts/08.Balancing_Braces.html
@@ -52,7 +52,7 @@
 				<br>
 				
 				<figure style="padding-top:1em">
-					<iframe src="08.Balancing_Braces/example.html" style="height:26ex" scrolling="no"></iframe>
+					<iframe src="08.Balancing_Braces/example" style="height:26ex" scrolling="no"></iframe>
 					<figcaption style="padding-top:1em"><strong>Live Example:</strong> All tests passing.</figcaption>
 				</figure>
 				
