--- a/blog.html
+++ b/blog.html
@@ -306,7 +306,7 @@
 				<br>
 				
 				<figure style="padding-top:1em">
-					<iframe src="blog-posts/08.Balancing_Braces/example.html" style="height:26ex" scrolling="no"></iframe>
+					<iframe src="blog-posts/08.Balancing_Braces/example" style="height:26ex" scrolling="no"></iframe>
 					<figcaption style="padding-top:1em"><strong>Live Example:</strong> All tests passing.</figcaption>
 				</figure>
 				
