Templated blog post headers, added display of tags to blog posts.

--- a/blog-posts/01.The_Start_at_the_End.html
+++ b/blog-posts/01.The_Start_at_the_End.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 	<head>
 		<meta charset=utf-8>
-		<title>The Start at the End</title>
+		<title>The Start</title>
 		<link href="/css/grey-and-blue.css" rel=stylesheet>
 		<meta name="theme-color" content="#3377FF">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
@@ -25,8 +25,12 @@
 			</div>
 			<a name='content'></a>
 			<div id='content-pane'>
-				<h2><a href="01.The_Start_at_the_End.html">The Start</a></h2>
+				<h2><a href="/blog-posts/01.The_Start_at_the_End">The Start</a></h2>
+
 				<p>This is the start of the blog. That's all there is, there is no more.</p>
+
+				<!-- this post is untagged -->
+
 			</div>
 		</div>
 	</body>
