--- a/blog-posts/03.CreateJS_Examples.html
+++ b/blog-posts/03.CreateJS_Examples.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 	<head>
 		<meta charset=utf-8>
-		<title>CreateJS Examples</title>
+		<title>Practical CreateJS Examples</title>
 		<link href="/css/grey-and-blue.css" rel=stylesheet>
 		<meta name="theme-color" content="#3377FF">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
@@ -25,8 +25,9 @@
 			</div>
 			<a name='content'></a>
 			<div id='content-pane'>
-				<h2><a href="03.CreateJS_Examples.html">Practical CreateJS Examples</a></h2>
-				<!-- /This is a trigger to start looking for elements with data-code-sources. The script pans through the entire page looking for it, because I don't know to to 'get elements after this element'. We break at the <hr> -->
+				<h2><a href="/blog-posts/03.CreateJS_Examples">Practical CreateJS Examples</a></h2>
+
+				<!-- This class is a trigger to start looking for elements with data-code-sources. The script pans through the entire page looking for it, because I don't know to to 'get elements after this element'. We break at the <hr> -->
 				<script class='start-code-viewer-scan'>
 					"use strict";
 					var createjsExamples = {
@@ -256,6 +257,9 @@
 				<p>I hope this provides some examples of good architecture in CreateJS. In some cases, I've chosen simplicity over correctness. I feel this is an acceptable trade-off, because it is much easier to correct something in-place than it is to rearchitect it. Good luck with your project!</p>
 				<!-- /Replace this with the last element in the article, when we've written it. -->
 				<span data-code-viewer-scan='end'></span>
+
+				<span class="tags">tags: <a href="/blog-posts/tags#demo">demo</a>, <a href="/blog-posts/tags#interactive">interactive</a>, <a href="/blog-posts/tags#createjs">createjs</a>, <a href="/blog-posts/tags#article">article</a>, <a href="/blog-posts/tags#example">example</a>, <a href="/blog-posts/tags#web-dev">web dev</a>, <a href="/blog-posts/tags#html5">html5</a></span>
+
 			</div>
 		</div>
 	</body>
