--- a/blog-posts/05.Calculating_a_Bounce.html
+++ b/blog-posts/05.Calculating_a_Bounce.html
@@ -25,7 +25,8 @@
 			</div>
 			<a name='content'></a>
 			<div id='content-pane'>
-				<h2><a href="05.Calculating_a_Bounce.html">Calculating a Bounce</a></h2>
+				<h2><a href="/blog-posts/05.Calculating_a_Bounce">Calculating a Bounce</a></h2>
+
 				<div class="no-p-indent">
 					<p>Problem: Given a ball and a curved wall, how do we calculate the angle of the bounce of the ball? Assuming we have the normal of the wall at the bounce location, our problem becomes:</p>
 					<p>Problem: Given two vectors, x₁ and n, how do we mirror vector x₁ around vector n to get x′? (x₁ is the ball velocity and n is the normal of the wall.)</p>
@@ -66,6 +67,9 @@
 						<code>}</code>
 					</div>
 				</div>
+
+				<span class="tags">tags: <a href="/blog-posts/tags#math">math</a>, <a href="/blog-posts/tags#bounce">bounce</a>, <a href="/blog-posts/tags#physics">physics</a></span>
+
 			</div>
 		</div>
 	</body>
