--- a/blog-posts/09.CSP_on_HTML_Assets.html
+++ b/blog-posts/09.CSP_on_HTML_Assets.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 	<head>
 		<meta charset=utf-8>
-		<title>CSP on HTML Assets</title>
+		<title>Web Security: Should CSP be set for my HTML files only, or my HTML files and all my assets?</title>
 		<link href="/css/grey-and-blue.css" rel=stylesheet>
 		<meta name="theme-color" content="#3377FF">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5.0, minimum-scale=1">
@@ -25,8 +25,12 @@
 			</div>
 			<a name='content'></a>
 			<div id='content-pane'>
-				<h2 id="CSP"><a href="09.CSP_on_HTML_Assets.html">Web Security: Should CSP be set for my HTML files only, or my HTML files and all my assets?</a></h2>
+				<h2><a href="/blog-posts/09.CSP_on_HTML_Assets">Web Security: Should CSP be set for my HTML files only, or my HTML files and all my assets?</a></h2>
+
 				<p>Yes. "Some web framework automatically generate html on error pages and we found xss issues in those in the past, so setting <a href="https://developer.mozilla.org/en/docs/Web/Security/CSP">CSP</a> on everything is best." --ulfr from <a href="irc://irc.mozilla.org">Moznet</a></p>
+
+				<span class="tags">tags: <a href="/blog-posts/tags#csp">csp</a>, <a href="/blog-posts/tags#web-dev">web dev</a>, <a href="/blog-posts/tags#xss">xss</a>, <a href="/blog-posts/tags#microblog">microblog</a></span>
+
 			</div>
 		</div>
 	</body>
