Updated wlroberts main page.

--- a/wlroberts/index.html
+++ b/wlroberts/index.html
@@ -323,7 +323,16 @@ University, Department of Psychology. ERIC Document Reproduction Service No. ED 
 and Preschool Q-sort documents contain directions for sorting, as well as the Q-sort items.
 The Child Rating Questionnaire document contains details of the scales used in Roberts & Strayer (1996).
 If you have questions about these instruments or would like copies of other instruments I have used,
-please contact me by <A HREF="mailto:WLRoberts@tru.ca">e-mail</A>
+please contact me by <A HREF="mailto:WRoberts@tru.ca">e-mail</A>
+
+<H2 ALIGN="center">Measures of empathy</H2>
+
+<p align="left"><A HREF="empathycontinuumscoringmanual.pdf">The Empathy Continuum Scoring Manual</a> (Strayer & von Rossberg-Gempton, 1992). We regret that the videotapes described in the scoring manual are not available because of copyright restrictions. We encourage researchers interested in this measure to apply the principles in the scoring manual to short film or videotape episodes specially selected for their own samples -- stories close to their experiences and able to engage them emotionally.
+</p>
+
+<p align="left"><A HREF="bryant.pdf">An Index of Empathy for Children and Adolescents</a>, Bryant (1982).
+</p>
+
 
 <H2 ALIGN="center">Measures of parenting</H2>
 
@@ -430,14 +439,6 @@ Be sure to confirm their suitability for your own sample.
   <p align="left"><A HREF="primaryschoolcriterionq-sort.pdf">Criterion Sorting for General Competence for the Primary School Behavior Q-sort</a> (Roberts, 1989)
 </LI>
 </UL>
-
-<H2 ALIGN="center">Measures of empathy</H2>
-
-<p align="left"><A HREF="empathycontinuumscoringmanual.pdf">The Empathy Continuum Scoring Manual</a> (Strayer & von Rossberg-Gempton, 1992). We regret that the videotapes described in the scoring manual are not available because of copyright restrictions. We encourage researchers interested in this measure to apply the principles in the scoring manual to short film or videotape episodes specially selected for their own samples -- stories close to their experiences and able to engage them emotionally.
-</p>
-
-<p align="left"><A HREF="bryant.pdf">An Index of Empathy for Children and Adolescents</a>, Bryant (1982).
-</p>
  
 <H1 ALIGN="center"><A NAME="links">Links to other resources in Psychology</A></H1>
 
