Did something to the blog, can't remember what, but still seems to work.

--- a/blog-posts/12.Same_Script_Multiple_Tags.html
+++ b/blog-posts/12.Same_Script_Multiple_Tags.html
@@ -10,7 +10,7 @@
 		<link href='/css/blog.css' rel='stylesheet'>
 		<link rel="alternate" type="application/rss+xml" title="DDR's Blog" href="/blog-rss-feed.xml" />
 		<link href='/css/prism-okaidia.css' rel='stylesheet'>
-		<script async defer src='/scripts/unindent-code-blocks.js'></script>
+		<script defer src='/scripts/unindent-code-blocks.js'></script>
 	</head>
 	<body>
 		<a href='#content' id='skip-nav'>skip nav</a>
