Updated some files for wlroberts/.

--- a/wlroberts/index.html
+++ b/wlroberts/index.html
@@ -139,7 +139,7 @@ Fraser University, 1984-1985.</P>
 
 <P align="left">Bezo, B.,  Maggi, S., &amp; Roberts, W. (2012). <A HREF="Bezo, Maggai, and Roberts, 2012.pdf"> The rights and freedoms gradient of health: evidence from a cross-national study.</A> <i>Frontiers in Developmental Psychology.</i> doi: 10.3389/fpsyg.2012.00441 </P>
 
-<P align="left">Maggi, S., Roberts, W.,  MacLennan, D., &amp; D'Angiulli, A. (2011). <A HREF="http://www.sciencedirect.com/science/article/pii/S0277953611004205">Community resilience, quality childcare, and preschoolers' mental health: A three-city comparison.</A> <i>Social Science and Medicine, 73(7)</i>, 1080-1087. doi:10.1016/j.socscimed.2011.06.052
+<P align="left">Maggi, S., Roberts, W.,  MacLennan, D., &amp; D'Angiulli, A. (2011). <A HREF="Community resilience, quality childcare, and preschoolers’ mental health.pdf">Community resilience, quality childcare, and preschoolers' mental health: A three-city comparison.</A> <i>Social Science and Medicine, 73(7)</i>, 1080-1087. doi:10.1016/j.socscimed.2011.06.052
 </P>
 
 <P align="left">Robinson, R., Roberts, W., Strayer, J. &amp; Koopman, R. (2007).  <A HREF="empathyanddelinquency.pdf">Empathy and Emotional Responsiveness in Delinquent and Non-Delinquent Adolescents.</A> <i>Social Development, 16</i>, 555-579.</P>
@@ -299,7 +299,11 @@ Care and Epidemiology, University of British Columbia.</P>
 
 <H2 ALIGN="center">Other Articles</H2>
 
+<P align="left">Roberts, W. (2022). <A HREF="Measurement Issues in Criterion Q-sorts.pdf"><i>Measurement Issues in Criterion Q-sorts</i></a>.
+</P>
+
 <P align="left">Roberts, W. (2011). <A HREF="A%20brief%20guide%20to%20the%20characters%20in%20L%20M%20Montgomery%27s%20A%20Tangled%20Web.pdf"><i>A brief guide to the characters in L M Montgomery's</i> A Tangled Web</a>.
+</P>
 
 <P align="left">Walton, P., Roberts, W., & Wiltse, L. (2003). <A HREF="grade1reading.pdf"><i>Language Skills in Kindergarten and Reading Ability at the End of Grade 1:
 A Longitudinal Study</i></a>.
