Updates to Dad's website.

--- a/wlroberts/index.html
+++ b/wlroberts/index.html
@@ -1,18 +1,17 @@
 <html>
 <head>
 <title>Dr. William L. Roberts</title>
-<meta name="KEYWORDS" content=">
+<meta name="KEYWORDS" content="">
 <!--INSERT APPROPRIATE KEYWORDS HERE -->
 
 <meta http-equiv="Content-Type" content="text/html;">
-<embed src="IMG_5246d.JPG" align="right" alt="Bill Roberts">
+<img src="IMG_5246d.JPG" align="right" alt="Bill Roberts">
 
-</script>
 <style type="text/css">
 <!--
 p {  font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 10pt; color: #000000; text-decoration: none}
 body {  font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 10pt; background-color: #FFFFFF}
-hr {  background-color: #FFFFFF; background-image: url('/images_general/c_bottom_line.gif'); background-position:  center; }
+/*hr {  background-color: #FFFFFF; background-image: url('/images_general/c_bottom_line.gif'); background-position:  center; }*/
 u {  font-family: Verdana, Arial, Helvetica, sans-serif; list-style-position: outside; list-style-type: disk; font-size: 10pt}
 ul {  font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 10pt; list-style-position: outside}
 ol {  font-family: Verdana, Arial, Helvetica, sans-serif; list-style-position: outside; font-size: 10pt}
@@ -653,10 +652,13 @@ contrast analysis.  <i>Psychological Methods</i>, 9, 164-182
     </td></tr>
   <tr valign="top">
     <td align="center" height="97">
-      <p class="footerText"><img src="/images_general/c_bottom_line.gif" width="598" height="9"><a href="/about_ucc/index.html"><br>
-        </a><a href="http://www.tru.ca/arts/psychology.html">Return to Psychology</a>
+      <p class="footerText">
+        <!-- Don't know where this has gone. Use <hr> for now. <img src="images_general/c_bottom_line.gif" width="598" height="9">-->
+        <hr>
+        <br>
+        <a href="http://www.tru.ca/arts/psychology.html">Visit TRU Psychology</a>
       </p>
-      </td></tr>
+  </td></tr>
 </table>
 <p>&nbsp;</p>
 </body>
