--- a/gallery.html
+++ b/gallery.html
@@ -130,6 +130,7 @@
 						<li><a href="/side projects/colour">light painting tool</a></li>
 						<li>accessible D&D dice roller: <a href="/d">d</a> or <a href="/🎲">🎲</a>. (Version history: <a href="/⚀">⚀</a>, <a href="/⚁">⚁</a>.)</li>
 						<li><a href="/side projects/reminder">periodic reminder tool</a> <a href="/side projects/📳">📳</a></li>
+						<li><a href="/side projects/visual-emoji-tester">visual emoji tester</a></li>
 					</ol>
 					
 					See also: <a href="/files/personal/resume.pdf">my resume</a>.
@@ -138,7 +139,7 @@
 			</div>
 		</div>
 		<footer> 
-			Site ©2020 David Roberts.
+			Site ©2023 David Roberts.
 			<a href='#' onclick='window.city.toggleVisibility()' style='float: right; margin-right: 20%;'>
 				<img src='images/easter-egg pull.svg'>
 			</a>
