--- a/side projects/reminder.html
+++ b/side projects/reminder.html
@@ -20,6 +20,7 @@
 				align-items: center;
 			}
 			form {
+				max-width: 20rem;
 				background-color: #0002;
 				margin: 1rem;
 				border: 1rem solid #CCA;
