Added my current work at EA to the gallery page.

--- a/gallery.html
+++ b/gallery.html
@@ -25,12 +25,20 @@
 			</div>
 			<a name='content'></a>
 			<div id='content-pane'>
+				<!-- Electronic Arts -->
+				<section>
+					<a href="https://www.ea.com/games/skate"><img width=300 height=300 class="cover right" src="images/gallery/ea.png"></a>
+					<h2>Skate and FIFA</h2>
+					<p>Between 2021 and 2025 I worked at Electronic Arts Inc. Initially I worked on FIFA 22 as a UI engineer, but after release moved to Skate where I am currently a tools engineer.</p>
+				</section>
+				<hr>
+				
 				<!-- FROGATTO -->
 				<!-- Oh, wouldn't it be nice to be able to define a height variable here… but can't do that. -->
 				<section>
 					<a href="https://www.frogatto.com/"><img class="cover left" src="images/gallery/frogatto forest-crossroads (small).png"></a>
 					<h2>Frogatto &&nbsp;Friends</h2>
-					<p>A beautiful 2D platformer game I have been working on since 2009 with Lost Pixel. You can buy it on <a href="https://www.frogatto.com/">Frogatto.com</a> for $9.99. <a href="https://en.wikipedia.org/wiki/Digital_rights_management">DRM</a>-free. 10+ hours of gameplay. No internet connection required. Hand-pixelled artwork. Family-friendly. Source available on <a href="https://github.com/frogatto/frogatto/">github</a>, coming soon to Steam!</p>
+					<p>A beautiful 2D platformer game I have been working on between 2009 with Lost Pixel. You can buy it on <a href="https://store.steampowered.com/app/865030/Frogatto__Friends/">Frogatto.com</a> for about $30. <a href="https://en.wikipedia.org/wiki/Digital_rights_management">DRM</a>-free. 10+ hours of gameplay. No internet connection required. Hand-pixelled artwork. Family-friendly. Source available on <a href="https://github.com/frogatto/frogatto/">github</a>, coming soon to Steam!</p>
 				</section>
 				<hr>
 				
